# bengali-tts-service

./: .gitignore  CONTEXT.md  README.md  docker-compose.native-worker.yml  docker-compose.yml
.github/workflows/: ci.yml
docs/: PRD.md  indicf5-setup.md  load-test.md  observability.md
docs/adr/: 0001-node-gateway-python-worker-split.md  0002-postgresql-for-job-state-and-users.md  0003-redis-bullmq-job-queue.md  0004-minio-object-storage-for-audio.md
docs/tasks/: 01-walking-skeleton.md  02-auth-api-keys.md  03-core-tracer-bullet.md  04-job-history-isolation.md  05-real-indicf5-engine.md  06-backpressure-gates.md  07-failure-paths.md  08-observability.md  09-load-test.md  10-monitoring-dashboard.md  11-idempotency-key.md  12-sse-status-stream.md  13-submission-package.md
gateway/: .dockerignore  Dockerfile  eslint.config.js  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts
gateway/prisma/: schema.prisma
gateway/prisma/migrations/20260704020502_init/: migration.sql
gateway/prisma/migrations/20260704023101_api_keys/: migration.sql
gateway/prisma/migrations/20260704023807_jobs/: migration.sql
gateway/prisma/migrations/20260704032435_job_history_index/: migration.sql
gateway/prisma/migrations/20260704113000_job_idempotency_key/: migration.sql
gateway/src/: app.ts  config.ts  server.ts
gateway/src/lib/: api-keys.ts  errors.ts  metrics.ts  prisma.ts  queue.ts  rate-limit.ts  redis.ts  shutdown.ts  sse.ts  storage.ts  tts-text.ts  validate.ts
gateway/src/middleware/: auth.ts
gateway/src/routes/: auth.ts  health.ts  jobs.ts  keys.ts  me.ts
gateway/test/: auth.test.ts  backpressure.test.ts  errors.unit.test.ts  global-setup.ts  health.test.ts  history.test.ts  idempotency.test.ts  jobs.test.ts  observability.test.ts  shutdown.test.ts  sse.test.ts  tts-text.unit.test.ts
gateway/test/helpers/: test-app.ts
load/: tts-load.js
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: tts.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: e2e-smoke.sh
worker/: .dockerignore  Dockerfile  pyproject.toml
worker/src/worker/: config.py  db.py  logs.py  main.py  processor.py  storage.py
worker/src/worker/engines/: __init__.py  audio.py  base.py  fake.py  indicf5.py
worker/tests/: conftest.py  test_audio.py  test_config.py  test_failure_paths.py  test_logging.py  test_pipeline.py
