[project]
name = "bengali-tts-worker"
version = "0.1.0"
description = "Inference worker for the Bengali TTS service"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "structlog>=24.0",
    "bullmq>=2.0",
    "psycopg[binary]>=3.1",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "testcontainers[postgres,redis,minio]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
