[project]
name = "bengali-tts-worker"
version = "0.1.0"
description = "Inference worker for the Bengali TTS service"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "structlog>=24.0",
    "bullmq>=2.0",
    "psycopg[binary]>=3.1",
    "boto3>=1.34",
]

[project.optional-dependencies]
# Real inference. Torch-sized; the fake engine needs none of it, so CI
# and local test runs install only [dev]. The Dockerfile pre-installs the
# same set as its own layer to keep code-change rebuilds fast.
indicf5 = [
    "f5_tts @ git+https://github.com/AI4Bharat/IndicF5.git",
    # <4.50 per IndicF5 requirements; newer transformers meta-initialize
    # models, breaking the remote code's in-constructor vocoder load.
    "transformers<4.50",
    # torchaudio >= 2.9 decodes through torchcodec (needs ffmpeg present).
    "torchcodec",
    "huggingface_hub>=0.23",
]
dev = [
    "mypy>=1.10",
    "numpy",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "testcontainers[postgres,redis,minio]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.hatch.metadata]
# The [indicf5] extra installs the model package straight from GitHub.
allow-direct-references = true

[tool.mypy]
files = ["src"]
# bullmq and boto3 ship no type stubs; their objects are typed Any at the
# seams (see processor.py) rather than pretending to a precision the
# libraries do not offer.
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
